languages/php/parser.out
Created by PLY version 3.3 (http://www.dabeaz.com/ply)

Unused terminals:

    OBJECT
    PROTECTED
    TRUE
    ANDOPP
    IMPORT
    RBRACE
    INTVAL
    GETTYPE
    NAMESPACE
    EXTENDS
    FOREACH
    ENDIF
    VAR
    PERIODEQUAL
    VAR_EXPORT
    INCLUDE_ONCE
    DOUBLE
    INTERFACE
    RETURN
    REQUIRE
    UNSERIALIZE
    STATIC
    PRINT
    FINAL
    ENDFOREACH
    ENDSWITCH
    INTEGER
    FUNCTION
    FOR
    ECHO
    TRY
    ELSEIF
    INCLUDE
    REQUIRE_ONCE
    TYPEID
    ENDWHILE
    LBRACE
    STRVAL
    INT
    NESTR
    CONTINUE
    REAL
    DEFAULT
    GLOBAL
    ELSE
    WHILE
    PHPSTART
    NEW
    SETTYPE
    CASE
    VAR_DUMP
    SERIALIZE
    SWITCH
    ENDFOR
    CATCH
    ARRAY
    FLOATVAL
    INSTANCEOF
    OROPP
    ELLIPSIS
    IMPLEMENTS
    FALSE
    LIST
    BREAK
    BOOLEAN
    BOOL
    EXIT
    PUBLIC
    CONST
    DIE
    ABSTRACT
    DE
    PRINT_R
    NULL
    UNSET
    SEMI
    PRIVATE
    CLASS
    STRING
    XOROPP
    AS
    VARIABLE
    IF
    SELF
    FLOAT
    DOUBLEVAL
    PHPSTOP
    EQSTR
    THROW

Grammar

Rule 0     S' -> expression_opt
Rule 1     expression_opt -> empty
Rule 2     expression_opt -> expression
Rule 3     expression -> assignment_expression
Rule 4     expression -> expression COMMA assignment_expression
Rule 5     assignment_expression -> conditional_expression
Rule 6     assignment_expression -> unary_expression assignment_operator assignment_expression
Rule 7     assignment_operator -> EQUALS
Rule 8     assignment_operator -> TIMESEQUAL
Rule 9     assignment_operator -> DIVEQUAL
Rule 10    assignment_operator -> MODEQUAL
Rule 11    assignment_operator -> PLUSEQUAL
Rule 12    assignment_operator -> MINUSEQUAL
Rule 13    assignment_operator -> LSHIFTEQUAL
Rule 14    assignment_operator -> RSHIFTEQUAL
Rule 15    assignment_operator -> ANDEQUAL
Rule 16    assignment_operator -> OREQUAL
Rule 17    assignment_operator -> XOREQUAL
Rule 18    conditional_expression -> logical_or_expression
Rule 19    conditional_expression -> logical_or_expression CONDOP expression COLON conditional_expression
Rule 20    constant_expression -> conditional_expression
Rule 21    logical_or_expression -> logical_and_expression
Rule 22    logical_or_expression -> logical_or_expression LOR logical_and_expression
Rule 23    logical_and_expression -> inclusive_or_expression
Rule 24    logical_and_expression -> logical_and_expression LAND inclusive_or_expression
Rule 25    inclusive_or_expression -> exclusive_or_expression
Rule 26    inclusive_or_expression -> inclusive_or_expression OR exclusive_or_expression
Rule 27    exclusive_or_expression -> and_expression
Rule 28    exclusive_or_expression -> exclusive_or_expression XOR and_expression
Rule 29    and_expression -> equality_expression
Rule 30    and_expression -> and_expression AND equality_expression
Rule 31    equality_expression -> relational_expression
Rule 32    equality_expression -> equality_expression EQ relational_expression
Rule 33    equality_expression -> equality_expression NE relational_expression
Rule 34    relational_expression -> shift_expression
Rule 35    relational_expression -> relational_expression LT shift_expression
Rule 36    relational_expression -> relational_expression GT shift_expression
Rule 37    relational_expression -> relational_expression LE shift_expression
Rule 38    relational_expression -> relational_expression GE shift_expression
Rule 39    shift_expression -> additive_expression
Rule 40    shift_expression -> shift_expression LSHIFT additive_expression
Rule 41    shift_expression -> shift_expression RSHIFT additive_expression
Rule 42    additive_expression -> multiplicative_expression
Rule 43    additive_expression -> additive_expression PLUS multiplicative_expression
Rule 44    additive_expression -> additive_expression MINUS multiplicative_expression
Rule 45    multiplicative_expression -> cast_expression
Rule 46    multiplicative_expression -> multiplicative_expression TIMES cast_expression
Rule 47    multiplicative_expression -> multiplicative_expression DIVIDE cast_expression
Rule 48    multiplicative_expression -> multiplicative_expression MOD cast_expression
Rule 49    cast_expression -> unary_expression
Rule 50    unary_expression -> postfix_expression
Rule 51    unary_expression -> PLUSPLUS unary_expression
Rule 52    unary_expression -> MINUSMINUS unary_expression
Rule 53    unary_expression -> unary_operator cast_expression
Rule 54    unary_operator -> AND
Rule 55    unary_operator -> TIMES
Rule 56    unary_operator -> PLUS
Rule 57    unary_operator -> MINUS
Rule 58    unary_operator -> NOT
Rule 59    unary_operator -> LNOT
Rule 60    postfix_expression -> primary_expression
Rule 61    postfix_expression -> postfix_expression LBRACKET expression RBRACKET
Rule 62    postfix_expression -> postfix_expression LPAREN argument_expression_list RPAREN
Rule 63    postfix_expression -> postfix_expression LPAREN RPAREN
Rule 64    postfix_expression -> postfix_expression PERIOD ID
Rule 65    postfix_expression -> postfix_expression ARROW ID
Rule 66    postfix_expression -> postfix_expression PLUSPLUS
Rule 67    postfix_expression -> postfix_expression MINUSMINUS
Rule 68    primary_expression -> ID
Rule 69    primary_expression -> constant
Rule 70    primary_expression -> SCONST
Rule 71    primary_expression -> LPAREN expression RPAREN
Rule 72    argument_expression_list -> assignment_expression
Rule 73    argument_expression_list -> argument_expression_list COMMA assignment_expression
Rule 74    production -> constant
Rule 75    production -> production nosig
Rule 76    constant -> ICONST
Rule 77    constant -> FCONST
Rule 78    constant -> CCONST
Rule 79    nosig -> NEWLINE
Rule 80    nosig -> SPACE
Rule 81    nosig -> TAB
Rule 82    nosig -> COMMENT
Rule 83    empty -> <empty>

Terminals, with rules where they appear

ABSTRACT             : 
AND                  : 30 54
ANDEQUAL             : 15
ANDOPP               : 
ARRAY                : 
ARROW                : 65
AS                   : 
BOOL                 : 
BOOLEAN              : 
BREAK                : 
CASE                 : 
CATCH                : 
CCONST               : 78
CLASS                : 
COLON                : 19
COMMA                : 4 73
COMMENT              : 82
CONDOP               : 19
CONST                : 
CONTINUE             : 
DE                   : 
DEFAULT              : 
DIE                  : 
DIVEQUAL             : 9
DIVIDE               : 47
DOUBLE               : 
DOUBLEVAL            : 
ECHO                 : 
ELLIPSIS             : 
ELSE                 : 
ELSEIF               : 
ENDFOR               : 
ENDFOREACH           : 
ENDIF                : 
ENDSWITCH            : 
ENDWHILE             : 
EQ                   : 32
EQSTR                : 
EQUALS               : 7
EXIT                 : 
EXTENDS              : 
FALSE                : 
FCONST               : 77
FINAL                : 
FLOAT                : 
FLOATVAL             : 
FOR                  : 
FOREACH              : 
FUNCTION             : 
GE                   : 38
GETTYPE              : 
GLOBAL               : 
GT                   : 36
ICONST               : 76
ID                   : 64 65 68
IF                   : 
IMPLEMENTS           : 
IMPORT               : 
INCLUDE              : 
INCLUDE_ONCE         : 
INSTANCEOF           : 
INT                  : 
INTEGER              : 
INTERFACE            : 
INTVAL               : 
LAND                 : 24
LBRACE               : 
LBRACKET             : 61
LE                   : 37
LIST                 : 
LNOT                 : 59
LOR                  : 22
LPAREN               : 62 63 71
LSHIFT               : 40
LSHIFTEQUAL          : 13
LT                   : 35
MINUS                : 44 57
MINUSEQUAL           : 12
MINUSMINUS           : 52 67
MOD                  : 48
MODEQUAL             : 10
NAMESPACE            : 
NE                   : 33
NESTR                : 
NEW                  : 
NEWLINE              : 79
NOT                  : 58
NULL                 : 
OBJECT               : 
OR                   : 26
OREQUAL              : 16
OROPP                : 
PERIOD               : 64
PERIODEQUAL          : 
PHPSTART             : 
PHPSTOP              : 
PLUS                 : 43 56
PLUSEQUAL            : 11
PLUSPLUS             : 51 66
PRINT                : 
PRINT_R              : 
PRIVATE              : 
PROTECTED            : 
PUBLIC               : 
RBRACE               : 
RBRACKET             : 61
REAL                 : 
REQUIRE              : 
REQUIRE_ONCE         : 
RETURN               : 
RPAREN               : 62 63 71
RSHIFT               : 41
RSHIFTEQUAL          : 14
SCONST               : 70
SELF                 : 
SEMI                 : 
SERIALIZE            : 
SETTYPE              : 
SPACE                : 80
STATIC               : 
STRING               : 
STRVAL               : 
SWITCH               : 
TAB                  : 81
THROW                : 
TIMES                : 46 55
TIMESEQUAL           : 8
TRUE                 : 
TRY                  : 
TYPEID               : 
UNSERIALIZE          : 
UNSET                : 
VAR                  : 
VARIABLE             : 
VAR_DUMP             : 
VAR_EXPORT           : 
WHILE                : 
XOR                  : 28
XOREQUAL             : 17
XOROPP               : 
error                : 

Nonterminals, with rules where they appear

additive_expression  : 39 40 41 43 44
and_expression       : 27 28 30
argument_expression_list : 62 73
assignment_expression : 3 4 6 72 73
assignment_operator  : 6
cast_expression      : 45 46 47 48 53
conditional_expression : 5 19 20
constant             : 69 74
constant_expression  : 
empty                : 1
equality_expression  : 29 30 32 33
exclusive_or_expression : 25 26 28
expression           : 2 4 19 61 71
expression_opt       : 0
inclusive_or_expression : 23 24 26
logical_and_expression : 21 22 24
logical_or_expression : 18 19 22
multiplicative_expression : 42 43 44 46 47 48
nosig                : 75
postfix_expression   : 50 61 62 63 64 65 66 67
primary_expression   : 60
production           : 75
relational_expression : 31 32 33 35 36 37 38
shift_expression     : 34 35 36 37 38 40 41
unary_expression     : 6 49 51 52
unary_operator       : 53

Parsing method: LALR

state 0

    (0) S' -> . expression_opt
    (1) expression_opt -> . empty
    (2) expression_opt -> . expression
    (83) empty -> .
    (3) expression -> . assignment_expression
    (4) expression -> . expression COMMA assignment_expression
    (5) assignment_expression -> . conditional_expression
    (6) assignment_expression -> . unary_expression assignment_operator assignment_expression
    (18) conditional_expression -> . logical_or_expression
    (19) conditional_expression -> . logical_or_expression CONDOP expression COLON conditional_expression
    (50) unary_expression -> . postfix_expression
    (51) unary_expression -> . PLUSPLUS unary_expression
    (52) unary_expression -> . MINUSMINUS unary_expression
    (53) unary_expression -> . unary_operator cast_expression
    (21) logical_or_expression -> . logical_and_expression
    (22) logical_or_expression -> . logical_or_expression LOR logical_and_expression
    (60) postfix_expression -> . primary_expression
    (61) postfix_expression -> . postfix_expression LBRACKET expression RBRACKET
    (62) postfix_expression -> . postfix_expression LPAREN argument_expression_list RPAREN
    (63) postfix_expression -> . postfix_expression LPAREN RPAREN
    (64) postfix_expression -> . postfix_expression PERIOD ID
    (65) postfix_expression -> . postfix_expression ARROW ID
    (66) postfix_expression -> . postfix_expression PLUSPLUS
    (67) postfix_expression -> . postfix_expression MINUSMINUS
    (54) unary_operator -> . AND
    (55) unary_operator -> . TIMES
    (56) unary_operator -> . PLUS
    (57) unary_operator -> . MINUS
    (58) unary_operator -> . NOT
    (59) unary_operator -> . LNOT
    (23) logical_and_expression -> . inclusive_or_expression
    (24) logical_and_expression -> . logical_and_expression LAND inclusive_or_expression
    (68) primary_expression -> . ID
    (69) primary_expression -> . constant
    (70) primary_expression -> . SCONST
    (71) primary_expression -> . LPAREN expression RPAREN
    (25) inclusive_or_expression -> . exclusive_or_expression
    (26) inclusive_or_expression -> . inclusive_or_expression OR exclusive_or_expression
    (76) constant -> . ICONST
    (77) constant -> . FCONST
    (78) constant -> . CCONST
    (27) exclusive_or_expression -> . and_expression
    (28) exclusive_or_expression -> . exclusive_or_expression XOR and_expression
    (29) and_expression -> . equality_expression
    (30) and_expression -> . and_expression AND equality_expression
    (31) equality_expression -> . relational_expression
    (32) equality_expression -> . equality_expression EQ relational_expression
    (33) equality_expression -> . equality_expression NE relational_expression
    (34) relational_expression -> . shift_expression
    (35) relational_expression -> . relational_expression LT shift_expression
    (36) relational_expression -> . relational_expression GT shift_expression
    (37) relational_expression -> . relational_expression LE shift_expression
    (38) relational_expression -> . relational_expression GE shift_expression
    (39) shift_expression -> . additive_expression
    (40) shift_expression -> . shift_expression LSHIFT additive_expression
    (41) shift_expression -> . shift_expression RSHIFT additive_expression
    (42) additive_expression -> . multiplicative_expression
    (43) additive_expression -> . additive_expression PLUS multiplicative_expression
    (44) additive_expression -> . additive_expression MINUS multiplicative_expression
    (45) multiplicative_expression -> . cast_expression
    (46) multiplicative_expression -> . multiplicative_expression TIMES cast_expression
    (47) multiplicative_expression -> . multiplicative_expression DIVIDE cast_expression
    (48) multiplicative_expression -> . multiplicative_expression MOD cast_expression
    (49) cast_expression -> . unary_expression

    $end            reduce using rule 83 (empty -> .)
    PLUSPLUS        shift and go to state 20
    MINUSMINUS      shift and go to state 8
    AND             shift and go to state 30
    TIMES           shift and go to state 27
    PLUS            shift and go to state 14
    MINUS           shift and go to state 7
    NOT             shift and go to state 34
    LNOT            shift and go to state 1
    ID              shift and go to state 28
    SCONST          shift and go to state 6
    LPAREN          shift and go to state 25
    ICONST          shift and go to state 23
    FCONST          shift and go to state 10
    CCONST          shift and go to state 12

    constant                       shift and go to state 2
    unary_expression               shift and go to state 3
    exclusive_or_expression        shift and go to state 4
    and_expression                 shift and go to state 9
    inclusive_or_expression        shift and go to state 11
    postfix_expression             shift and go to state 13
    relational_expression          shift and go to state 15
    cast_expression                shift and go to state 16
    logical_or_expression          shift and go to state 17
    unary_operator                 shift and go to state 18
    assignment_expression          shift and go to state 19
    multiplicative_expression      shift and go to state 21
    additive_expression            shift and go to state 5
    primary_expression             shift and go to state 24
    logical_and_expression         shift and go to state 26
    shift_expression               shift and go to state 31
    equality_expression            shift and go to state 29
    expression_opt                 shift and go to state 22
    empty                          shift and go to state 32
    conditional_expression         shift and go to state 33
    expression                     shift and go to state 35

state 1

    (59) unary_operator -> LNOT .

    PLUSPLUS        reduce using rule 59 (unary_operator -> LNOT .)
    MINUSMINUS      reduce using rule 59 (unary_operator -> LNOT .)
    AND             reduce using rule 59 (unary_operator -> LNOT .)
    TIMES           reduce using rule 59 (unary_operator -> LNOT .)
    PLUS            reduce using rule 59 (unary_operator -> LNOT .)
    MINUS           reduce using rule 59 (unary_operator -> LNOT .)
    NOT             reduce using rule 59 (unary_operator -> LNOT .)
    LNOT            reduce using rule 59 (unary_operator -> LNOT .)
    ID              reduce using rule 59 (unary_operator -> LNOT .)
    SCONST          reduce using rule 59 (unary_operator -> LNOT .)
    LPAREN          reduce using rule 59 (unary_operator -> LNOT .)
    ICONST          reduce using rule 59 (unary_operator -> LNOT .)
    FCONST          reduce using rule 59 (unary_operator -> LNOT .)
    CCONST          reduce using rule 59 (unary_operator -> LNOT .)


state 2

    (69) primary_expression -> constant .

    LBRACKET        reduce using rule 69 (primary_expression -> constant .)
    LPAREN          reduce using rule 69 (primary_expression -> constant .)
    PERIOD          reduce using rule 69 (primary_expression -> constant .)
    ARROW           reduce using rule 69 (primary_expression -> constant .)
    PLUSPLUS        reduce using rule 69 (primary_expression -> constant .)
    MINUSMINUS      reduce using rule 69 (primary_expression -> constant .)
    EQUALS          reduce using rule 69 (primary_expression -> constant .)
    TIMESEQUAL      reduce using rule 69 (primary_expression -> constant .)
    DIVEQUAL        reduce using rule 69 (primary_expression -> constant .)
    MODEQUAL        reduce using rule 69 (primary_expression -> constant .)
    PLUSEQUAL       reduce using rule 69 (primary_expression -> constant .)
    MINUSEQUAL      reduce using rule 69 (primary_expression -> constant .)
    LSHIFTEQUAL     reduce using rule 69 (primary_expression -> constant .)
    RSHIFTEQUAL     reduce using rule 69 (primary_expression -> constant .)
    ANDEQUAL        reduce using rule 69 (primary_expression -> constant .)
    OREQUAL         reduce using rule 69 (primary_expression -> constant .)
    XOREQUAL        reduce using rule 69 (primary_expression -> constant .)
    TIMES           reduce using rule 69 (primary_expression -> constant .)
    DIVIDE          reduce using rule 69 (primary_expression -> constant .)
    MOD             reduce using rule 69 (primary_expression -> constant .)
    PLUS            reduce using rule 69 (primary_expression -> constant .)
    MINUS           reduce using rule 69 (primary_expression -> constant .)
    LSHIFT          reduce using rule 69 (primary_expression -> constant .)
    RSHIFT          reduce using rule 69 (primary_expression -> constant .)
    LT              reduce using rule 69 (primary_expression -> constant .)
    GT              reduce using rule 69 (primary_expression -> constant .)
    LE              reduce using rule 69 (primary_expression -> constant .)
    GE              reduce using rule 69 (primary_expression -> constant .)
    EQ              reduce using rule 69 (primary_expression -> constant .)
    NE              reduce using rule 69 (primary_expression -> constant .)
    AND             reduce using rule 69 (primary_expression -> constant .)
    XOR             reduce using rule 69 (primary_expression -> constant .)
    OR              reduce using rule 69 (primary_expression -> constant .)
    LAND            reduce using rule 69 (primary_expression -> constant .)
    CONDOP          reduce using rule 69 (primary_expression -> constant .)
    LOR             reduce using rule 69 (primary_expression -> constant .)
    COMMA           reduce using rule 69 (primary_expression -> constant .)
    $end            reduce using rule 69 (primary_expression -> constant .)
    RPAREN          reduce using rule 69 (primary_expression -> constant .)
    RBRACKET        reduce using rule 69 (primary_expression -> constant .)
    COLON           reduce using rule 69 (primary_expression -> constant .)


state 3

    (6) assignment_expression -> unary_expression . assignment_operator assignment_expression
    (49) cast_expression -> unary_expression .
    (7) assignment_operator -> . EQUALS
    (8) assignment_operator -> . TIMESEQUAL
    (9) assignment_operator -> . DIVEQUAL
    (10) assignment_operator -> . MODEQUAL
    (11) assignment_operator -> . PLUSEQUAL
    (12) assignment_operator -> . MINUSEQUAL
    (13) assignment_operator -> . LSHIFTEQUAL
    (14) assignment_operator -> . RSHIFTEQUAL
    (15) assignment_operator -> . ANDEQUAL
    (16) assignment_operator -> . OREQUAL
    (17) assignment_operator -> . XOREQUAL

    TIMES           reduce using rule 49 (cast_expression -> unary_expression .)
    DIVIDE          reduce using rule 49 (cast_expression -> unary_expression .)
    MOD             reduce using rule 49 (cast_expression -> unary_expression .)
    PLUS            reduce using rule 49 (cast_expression -> unary_expression .)
    MINUS           reduce using rule 49 (cast_expression -> unary_expression .)
    LSHIFT          reduce using rule 49 (cast_expression -> unary_expression .)
    RSHIFT          reduce using rule 49 (cast_expression -> unary_expression .)
    LT              reduce using rule 49 (cast_expression -> unary_expression .)
    GT              reduce using rule 49 (cast_expression -> unary_expression .)
    LE              reduce using rule 49 (cast_expression -> unary_expression .)
    GE              reduce using rule 49 (cast_expression -> unary_expression .)
    EQ              reduce using rule 49 (cast_expression -> unary_expression .)
    NE              reduce using rule 49 (cast_expression -> unary_expression .)
    AND             reduce using rule 49 (cast_expression -> unary_expression .)
    XOR             reduce using rule 49 (cast_expression -> unary_expression .)
    OR              reduce using rule 49 (cast_expression -> unary_expression .)
    LAND            reduce using rule 49 (cast_expression -> unary_expression .)
    CONDOP          reduce using rule 49 (cast_expression -> unary_expression .)
    LOR             reduce using rule 49 (cast_expression -> unary_expression .)
    COMMA           reduce using rule 49 (cast_expression -> unary_expression .)
    $end            reduce using rule 49 (cast_expression -> unary_expression .)
    RPAREN          reduce using rule 49 (cast_expression -> unary_expression .)
    RBRACKET        reduce using rule 49 (cast_expression -> unary_expression .)
    COLON           reduce using rule 49 (cast_expression -> unary_expression .)
    EQUALS          shift and go to state 39
    TIMESEQUAL      shift and go to state 46
    DIVEQUAL        shift and go to state 36
    MODEQUAL        shift and go to state 38
    PLUSEQUAL       shift and go to state 41
    MINUSEQUAL      shift and go to state 37
    LSHIFTEQUAL     shift and go to state 42
    RSHIFTEQUAL     shift and go to state 47
    ANDEQUAL        shift and go to state 44
    OREQUAL         shift and go to state 45
    XOREQUAL        shift and go to state 40

    assignment_operator            shift and go to state 43

state 4

    (25) inclusive_or_expression -> exclusive_or_expression .
    (28) exclusive_or_expression -> exclusive_or_expression . XOR and_expression

    OR              reduce using rule 25 (inclusive_or_expression -> exclusive_or_expression .)
    LAND            reduce using rule 25 (inclusive_or_expression -> exclusive_or_expression .)
    CONDOP          reduce using rule 25 (inclusive_or_expression -> exclusive_or_expression .)
    LOR             reduce using rule 25 (inclusive_or_expression -> exclusive_or_expression .)
    COMMA           reduce using rule 25 (inclusive_or_expression -> exclusive_or_expression .)
    $end            reduce using rule 25 (inclusive_or_expression -> exclusive_or_expression .)
    RPAREN          reduce using rule 25 (inclusive_or_expression -> exclusive_or_expression .)
    RBRACKET        reduce using rule 25 (inclusive_or_expression -> exclusive_or_expression .)
    COLON           reduce using rule 25 (inclusive_or_expression -> exclusive_or_expression .)
    XOR             shift and go to state 48


state 5

    (39) shift_expression -> additive_expression .
    (43) additive_expression -> additive_expression . PLUS multiplicative_expression
    (44) additive_expression -> additive_expression . MINUS multiplicative_expression

    LSHIFT          reduce using rule 39 (shift_expression -> additive_expression .)
    RSHIFT          reduce using rule 39 (shift_expression -> additive_expression .)
    LT              reduce using rule 39 (shift_expression -> additive_expression .)
    GT              reduce using rule 39 (shift_expression -> additive_expression .)
    LE              reduce using rule 39 (shift_expression -> additive_expression .)
    GE              reduce using rule 39 (shift_expression -> additive_expression .)
    EQ              reduce using rule 39 (shift_expression -> additive_expression .)
    NE              reduce using rule 39 (shift_expression -> additive_expression .)
    AND             reduce using rule 39 (shift_expression -> additive_expression .)
    XOR             reduce using rule 39 (shift_expression -> additive_expression .)
    OR              reduce using rule 39 (shift_expression -> additive_expression .)
    LAND            reduce using rule 39 (shift_expression -> additive_expression .)
    CONDOP          reduce using rule 39 (shift_expression -> additive_expression .)
    LOR             reduce using rule 39 (shift_expression -> additive_expression .)
    COMMA           reduce using rule 39 (shift_expression -> additive_expression .)
    $end            reduce using rule 39 (shift_expression -> additive_expression .)
    RPAREN          reduce using rule 39 (shift_expression -> additive_expression .)
    RBRACKET        reduce using rule 39 (shift_expression -> additive_expression .)
    COLON           reduce using rule 39 (shift_expression -> additive_expression .)
    PLUS            shift and go to state 49
    MINUS           shift and go to state 50


state 6

    (70) primary_expression -> SCONST .

    LBRACKET        reduce using rule 70 (primary_expression -> SCONST .)
    LPAREN          reduce using rule 70 (primary_expression -> SCONST .)
    PERIOD          reduce using rule 70 (primary_expression -> SCONST .)
    ARROW           reduce using rule 70 (primary_expression -> SCONST .)
    PLUSPLUS        reduce using rule 70 (primary_expression -> SCONST .)
    MINUSMINUS      reduce using rule 70 (primary_expression -> SCONST .)
    EQUALS          reduce using rule 70 (primary_expression -> SCONST .)
    TIMESEQUAL      reduce using rule 70 (primary_expression -> SCONST .)
    DIVEQUAL        reduce using rule 70 (primary_expression -> SCONST .)
    MODEQUAL        reduce using rule 70 (primary_expression -> SCONST .)
    PLUSEQUAL       reduce using rule 70 (primary_expression -> SCONST .)
    MINUSEQUAL      reduce using rule 70 (primary_expression -> SCONST .)
    LSHIFTEQUAL     reduce using rule 70 (primary_expression -> SCONST .)
    RSHIFTEQUAL     reduce using rule 70 (primary_expression -> SCONST .)
    ANDEQUAL        reduce using rule 70 (primary_expression -> SCONST .)
    OREQUAL         reduce using rule 70 (primary_expression -> SCONST .)
    XOREQUAL        reduce using rule 70 (primary_expression -> SCONST .)
    TIMES           reduce using rule 70 (primary_expression -> SCONST .)
    DIVIDE          reduce using rule 70 (primary_expression -> SCONST .)
    MOD             reduce using rule 70 (primary_expression -> SCONST .)
    PLUS            reduce using rule 70 (primary_expression -> SCONST .)
    MINUS           reduce using rule 70 (primary_expression -> SCONST .)
    LSHIFT          reduce using rule 70 (primary_expression -> SCONST .)
    RSHIFT          reduce using rule 70 (primary_expression -> SCONST .)
    LT              reduce using rule 70 (primary_expression -> SCONST .)
    GT              reduce using rule 70 (primary_expression -> SCONST .)
    LE              reduce using rule 70 (primary_expression -> SCONST .)
    GE              reduce using rule 70 (primary_expression -> SCONST .)
    EQ              reduce using rule 70 (primary_expression -> SCONST .)
    NE              reduce using rule 70 (primary_expression -> SCONST .)
    AND             reduce using rule 70 (primary_expression -> SCONST .)
    XOR             reduce using rule 70 (primary_expression -> SCONST .)
    OR              reduce using rule 70 (primary_expression -> SCONST .)
    LAND            reduce using rule 70 (primary_expression -> SCONST .)
    CONDOP          reduce using rule 70 (primary_expression -> SCONST .)
    LOR             reduce using rule 70 (primary_expression -> SCONST .)
    COMMA           reduce using rule 70 (primary_expression -> SCONST .)
    $end            reduce using rule 70 (primary_expression -> SCONST .)
    RPAREN          reduce using rule 70 (primary_expression -> SCONST .)
    RBRACKET        reduce using rule 70 (primary_expression -> SCONST .)
    COLON           reduce using rule 70 (primary_expression -> SCONST .)


state 7

    (57) unary_operator -> MINUS .

    PLUSPLUS        reduce using rule 57 (unary_operator -> MINUS .)
    MINUSMINUS      reduce using rule 57 (unary_operator -> MINUS .)
    AND             reduce using rule 57 (unary_operator -> MINUS .)
    TIMES           reduce using rule 57 (unary_operator -> MINUS .)
    PLUS            reduce using rule 57 (unary_operator -> MINUS .)
    MINUS           reduce using rule 57 (unary_operator -> MINUS .)
    NOT             reduce using rule 57 (unary_operator -> MINUS .)
    LNOT            reduce using rule 57 (unary_operator -> MINUS .)
    ID              reduce using rule 57 (unary_operator -> MINUS .)
    SCONST          reduce using rule 57 (unary_operator -> MINUS .)
    LPAREN          reduce using rule 57 (unary_operator -> MINUS .)
    ICONST          reduce using rule 57 (unary_operator -> MINUS .)
    FCONST          reduce using rule 57 (unary_operator -> MINUS .)
    CCONST          reduce using rule 57 (unary_operator -> MINUS .)


state 8

    (52) unary_expression -> MINUSMINUS . unary_expression
    (50) unary_expression -> . postfix_expression
    (51) unary_expression -> . PLUSPLUS unary_expression
    (52) unary_expression -> . MINUSMINUS unary_expression
    (53) unary_expression -> . unary_operator cast_expression
    (60) postfix_expression -> . primary_expression
    (61) postfix_expression -> . postfix_expression LBRACKET expression RBRACKET
    (62) postfix_expression -> . postfix_expression LPAREN argument_expression_list RPAREN
    (63) postfix_expression -> . postfix_expression LPAREN RPAREN
    (64) postfix_expression -> . postfix_expression PERIOD ID
    (65) postfix_expression -> . postfix_expression ARROW ID
    (66) postfix_expression -> . postfix_expression PLUSPLUS
    (67) postfix_expression -> . postfix_expression MINUSMINUS
    (54) unary_operator -> . AND
    (55) unary_operator -> . TIMES
    (56) unary_operator -> . PLUS
    (57) unary_operator -> . MINUS
    (58) unary_operator -> . NOT
    (59) unary_operator -> . LNOT
    (68) primary_expression -> . ID
    (69) primary_expression -> . constant
    (70) primary_expression -> . SCONST
    (71) primary_expression -> . LPAREN expression RPAREN
    (76) constant -> . ICONST
    (77) constant -> . FCONST
    (78) constant -> . CCONST

    PLUSPLUS        shift and go to state 20
    MINUSMINUS      shift and go to state 8
    AND             shift and go to state 30
    TIMES           shift and go to state 27
    PLUS            shift and go to state 14
    MINUS           shift and go to state 7
    NOT             shift and go to state 34
    LNOT            shift and go to state 1
    ID              shift and go to state 28
    SCONST          shift and go to state 6
    LPAREN          shift and go to state 25
    ICONST          shift and go to state 23
    FCONST          shift and go to state 10
    CCONST          shift and go to state 12

    constant                       shift and go to state 2
    unary_expression               shift and go to state 51
    postfix_expression             shift and go to state 13
    primary_expression             shift and go to state 24
    unary_operator                 shift and go to state 18

state 9

    (27) exclusive_or_expression -> and_expression .
    (30) and_expression -> and_expression . AND equality_expression

    XOR             reduce using rule 27 (exclusive_or_expression -> and_expression .)
    OR              reduce using rule 27 (exclusive_or_expression -> and_expression .)
    LAND            reduce using rule 27 (exclusive_or_expression -> and_expression .)
    CONDOP          reduce using rule 27 (exclusive_or_expression -> and_expression .)
    LOR             reduce using rule 27 (exclusive_or_expression -> and_expression .)
    COMMA           reduce using rule 27 (exclusive_or_expression -> and_expression .)
    $end            reduce using rule 27 (exclusive_or_expression -> and_expression .)
    RPAREN          reduce using rule 27 (exclusive_or_expression -> and_expression .)
    RBRACKET        reduce using rule 27 (exclusive_or_expression -> and_expression .)
    COLON           reduce using rule 27 (exclusive_or_expression -> and_expression .)
    AND             shift and go to state 52


state 10

    (77) constant -> FCONST .
